--- a/class.html
+++ b/class.html
@@ -12,14 +12,14 @@
     <h1>Космос: неизведанный мир</h1>
 
     <nav>
-        <a href="#">
-            <img src="rocket.png" class="iconup">Солнечная система
+        <a href="#" class="iconup">
+            <img src="png/header/rocket.png">Солнечная система
         </a>
-        <a href="#">
-            <img src="sputnik.png" class="iconup">Техника
+        <a href="#" class="iconup">
+            <img src="png/header/sputnik.png">Техника
         </a>
-        <a href="#">
-            <img src="star.png" class="iconup">Земные звёзды
+        <a href="#" class="iconup">
+            <img src="png/header/star.png">Земные звёзды
         </a>
     </nav>
 
@@ -31,17 +31,17 @@
 
         <article>
             <div class="planet">
-                <img src="venus.jpg">
+                <img src="png/planets/venus.jpg">
                 <p class="text">Венера</p>
             </div>
 
             <div class="planet">
-                <img src="earth.jpg">
+                <img src="png/planets/earth.jpg">
                 <p class="text">Земля</p>
             </div>
 
             <div class="planet">
-                <img src="jupiter.jpg">
+                <img src="png/planets/jupiter.jpg">
                 <p class="text">Юпитер</p>
             </div>
         </article>
@@ -50,10 +50,10 @@
 </main>
 
 <footer>
-    <img class="socicon vk" src="vk.png">
-    <img class="socicon yt" src="youtube.png">
-    <img class="socicon tg" src="telegram.png">
-    <img class="socicon snapcht" src="snapchat.png">
+    <img class="socicon vk" src="png/footer/vk.png">
+    <img class="socicon yt" src="png/footer/youtube.png">
+    <img class="socicon tg" src="png/footer/telegram.png">
+    <img class="socicon snapcht" src="png/footer/snapchat.png">
 </footer>
 
 </body>
